avoided deprecated method newInstance